--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Notify to IM
-      uses: echoings/actions.notify@v0.1.0
+      uses: yujietian/actions.notify@main
       with:
         plat_type: 'Lark'
         notify_title: 'Project Updated'
